--- a/README.me
+++ b/README.me
@@ -10,3 +10,4 @@ time – бот выводит текущее время
 change – указание нового пути к файлу с возможными вариантами ответа.Пример:C:\Users\User\Desktop\Test_aplana\Data\Data1.txt
 quit – выход из программы
 На написание программы потратил в общей сумме 1.5 час (с отладкой и приведением некоторых участков кода впорядок).
+В файле с названием SQL содержатся ответы на 3 задание. На него, я потратил больше времени так как на моем текущем месте работы запросы полегче и некоторые моменты нужно было вспомнить.
